// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Types if 1`] = `
ParseNode {
  "body": Array [
    ParseNode {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "literal",
    "type": "bool",
    "value": false,
  },
  "else": Array [
    ParseNode {
      "kind": "identifier",
      "name": "b",
    },
  ],
  "kind": "if",
}
`;

exports[`Types if-else 1`] = `
ParseNode {
  "body": Array [
    ParseNode {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "literal",
    "type": "bool",
    "value": false,
  },
  "else": ParseNode {
    "body": Array [
      ParseNode {
        "kind": "literal",
        "type": "int",
        "value": 23,
      },
    ],
    "condition": ParseNode {
      "kind": "literal",
      "type": "bool",
      "value": false,
    },
    "else": Array [
      ParseNode {
        "kind": "literal",
        "type": "str",
        "value": "yay",
      },
    ],
    "kind": "if",
  },
  "kind": "if",
}
`;

exports[`Types if-else with boolean 1`] = `
ParseNode {
  "body": Array [
    ParseNode {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": ParseNode {
      "kind": "identifier",
      "name": "a",
    },
    "operator": "==",
    "right": ParseNode {
      "kind": "identifier",
      "name": "b",
    },
  },
  "else": ParseNode {
    "body": Array [
      ParseNode {
        "kind": "literal",
        "type": "int",
        "value": 23,
      },
    ],
    "condition": ParseNode {
      "kind": "binary",
      "left": ParseNode {
        "kind": "identifier",
        "name": "b",
      },
      "operator": "==",
      "right": ParseNode {
        "kind": "identifier",
        "name": "c",
      },
    },
    "else": Array [
      ParseNode {
        "kind": "literal",
        "type": "str",
        "value": "hello",
      },
    ],
    "kind": "if",
  },
  "kind": "if",
}
`;

exports[`Types if-else-if 1`] = `
ParseNode {
  "body": Array [
    ParseNode {
      "kind": "identifier",
      "name": "a",
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": ParseNode {
      "kind": "identifier",
      "name": "a",
    },
    "operator": "==",
    "right": ParseNode {
      "kind": "identifier",
      "name": "b",
    },
  },
  "else": Array [
    ParseNode {
      "kind": "identifier",
      "name": "b",
    },
  ],
  "kind": "if",
}
`;

exports[`Types if-else-if with boolean 1`] = `
ParseNode {
  "body": Array [
    ParseNode {
      "kind": "assign",
      "left": ParseNode {
        "kind": "identifier",
        "name": "a",
      },
      "operator": "=",
      "right": ParseNode {
        "kind": "binary",
        "left": ParseNode {
          "kind": "identifier",
          "name": "a",
        },
        "operator": "+",
        "right": ParseNode {
          "kind": "literal",
          "type": "int",
          "value": 2,
        },
      },
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": ParseNode {
      "kind": "identifier",
      "name": "a",
    },
    "operator": "==",
    "right": ParseNode {
      "kind": "identifier",
      "name": "b",
    },
  },
  "kind": "while",
}
`;

exports[`Types while 1`] = `
ParseNode {
  "identifier": "x",
  "kind": "let",
  "value": ParseNode {
    "kind": "literal",
    "type": "int",
    "value": 0,
  },
}
`;

exports[`Types while 2`] = `
ParseNode {
  "body": Array [
    ParseNode {
      "kind": "assign",
      "left": ParseNode {
        "kind": "identifier",
        "name": "x",
      },
      "operator": "=",
      "right": ParseNode {
        "kind": "binary",
        "left": ParseNode {
          "kind": "identifier",
          "name": "x",
        },
        "operator": "+",
        "right": ParseNode {
          "kind": "literal",
          "type": "int",
          "value": 1,
        },
      },
    },
  ],
  "condition": ParseNode {
    "kind": "binary",
    "left": ParseNode {
      "kind": "identifier",
      "name": "x",
    },
    "operator": "<",
    "right": ParseNode {
      "kind": "literal",
      "type": "int",
      "value": 10,
    },
  },
  "kind": "while",
}
`;
